2012-06-02 3:00 pm Nathan
	    -added dual lanes - basically only needed to modify the 'car.update velocity'
	    code to correctly sense it was approaching a traffic light, add some new road
	    entrances and our forethought in programming handled the rest.
	    -adding amber was very tricky because the fact that a switch was a delayed
	    action meant that the program couldn't 'learn' the results for several moves
	    down the track. required quite a bit of rearranging of the main logic
	Query: whoever made the substantial changes to Main and 
	interfaces - can you explain what you've done? I... hope
	everything still works. Though a brief inspection of the output
	indicates its learning quite well.
	    Also, can we take stateCode out of RoadMap? The value thus
	computed is basically useless to everything except
	LearnerModuleImpl.
	
        -I made the substantial changes, it was necessary because of the way I had to 
        do amber lights, see brief description above
        - by all means move it into learnermoduleimpl

2012-06-02 12:00 Nathan
	        query: "base method" being a method of Object/whatever else
	    that might be extended?
	    -Base method being the method in the interface that is actually called.
	    Our program should never be calling a method of an impl class, it should
	    be calling a method of eg RoadMap, which then redirects to the method in
	    whichever class that particular instance is

	* Main.java: started cleaning up some duplicated code. However
	             the only reason I actually submitted this modified
	             version is I accidently deleted the old one; so by
	             all means overwrite it in case of a conflict.

2012-06-02 13:24:05 Gill <gmail gillemorris>
	* Viewer.java: pretty colors

2012-06-02 08:30:32 Gill <gmail gillemorris>
	Query: whoever made the substantial changes to Main and 
	interfaces - can you explain what you've done? I... hope